--- a/projects/angular/src/layout/nav/_header.clarity.scss
+++ b/projects/angular/src/layout/nav/_header.clarity.scss
@@ -88,6 +88,7 @@
   .branding {
     display: flex;
     flex: 0 0 auto;
+    height: header-variables.$clr-header-height;
     min-width: mixins.baselinePx(204);
     padding: 0 density.$clr-base-horizontal-offset-xl;
 
