--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -15,9 +15,15 @@
     </div>
     <div class="header-nav" [clr-nav-level]="1">
       <a class="nav-link" routerLink="/" routerLinkActive="active" clrAriaCurrentLink>
-        <span class="nav-text">Components</span>
+        <span class="nav-text">Components (NAV-1)</span>
       </a>
-      <a class="nav-link" href="javascript://"><span class="nav-text">Patterns</span></a>
+      <a class="nav-link" href="javascript://"><span class="nav-text">Patterns (NAV-1)</span></a>
+    </div>
+    <div class="header-nav" [clr-nav-level]="2">
+      <a class="nav-link" routerLink="/" routerLinkActive="active" clrAriaCurrentLink>
+        <span class="nav-text">Components (NAV-2)</span>
+      </a>
+      <a class="nav-link" href="javascript://"><span class="nav-text">Patterns (NAV-2)</span></a>
     </div>
     <form class="search">
       <label for="search_input">
