--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -105,4 +105,6 @@ $clr-base-spinner-stroke-s: var(--clr-base-spinner-stroke-s);
 $clr-base-spinner-stroke-m: var(--clr-base-spinner-stroke-m);
 $clr-base-spinner-stroke-l: var(--clr-base-spinner-stroke-l);
 
+$clr-base-header-height: var(--clr-base-header-height);
+
 $clr-base-progress-bar-height: var(--clr-base-progress-bar-height);
