--- a/projects/angular/src/emphasis/_labels.clarity.scss
+++ b/projects/angular/src/emphasis/_labels.clarity.scss
@@ -55,7 +55,7 @@
     border: label-variables.$clr-label-borderwidth solid label-variables.$clr-label-default-border-color;
     border-radius: density.$clr-base-border-radius-xl;
     min-height: density.$clr-base-row-height-s;
-    margin: 0 tokens.$cds-global-space-4 tokens.$cds-global-space-1 0;
+    margin: 0 density.$clr-base-horizontal-offset-s density.$clr-base-vertical-offset-2xs 0;
     white-space: nowrap;
     color: label-variables.$clr-label-font-color-light;
     text-decoration: none;
