fix(datagrid): detail caret position, manage columns padding

--- a/projects/angular/src/data/_properties.tables.scss
+++ b/projects/angular/src/data/_properties.tables.scss
@@ -15,7 +15,9 @@
     --clr-table-borderwidth: #{tokens.$cds-alias-object-border-width-100};
     --clr-table-border-radius: #{density.$clr-base-border-radius-s};
     --clr-table-cornercellradius: #{density.$clr-base-border-radius-s};
-    --clr-table-cell-padding: #{density.$clr-base-vertical-offset-multi-row-inline-m} #{density.$clr-base-horizontal-offset-xl};
+    --clr-table-cell-padding: #{table-variables.$clr-table-cell-vertical-padding} #{table-variables.$clr-table-cell-horizontal-padding};
+    --clr-table-cell-horizontal-padding: #{density.$clr-base-horizontal-offset-xl};
+    --clr-table-cell-vertical-padding: #{density.$clr-base-vertical-offset-multi-row-inline-m};
     --clr-table-cell-compact-padding: #{density.$clr-base-vertical-offset-multi-row-inline-s} #{density.$clr-base-horizontal-offset-xl};
     --clr-table-noborder-borderwidth: #{tokens.$cds-global-space-0};
 
