--- a/projects/angular/src/data/_variables.tables.scss
+++ b/projects/angular/src/data/_variables.tables.scss
@@ -11,6 +11,8 @@ $clr-table-borderwidth: var(--clr-table-borderwidth) !default;
 $clr-table-border-radius: var(--clr-table-border-radius) !default;
 $clr-table-cornercellradius: var(--clr-table-cornercellradius) !default;
 $clr-table-cell-padding: var(--clr-table-cell-padding) !default;
+$clr-table-cell-horizontal-padding: var(--clr-table-cell-horizontal-padding) !default;
+$clr-table-cell-vertical-padding: var(--clr-table-cell-vertical-padding) !default;
 $clr-table-cell-compact-padding: var(--clr-table-cell-compact-padding) !default;
 $clr-table-noborder-borderwidth: var(--clr-table-noborder-borderwidth) !default;
 
