--- a/projects/angular/src/modal/_modal.clarity.scss
+++ b/projects/angular/src/modal/_modal.clarity.scss
@@ -10,6 +10,7 @@
 @use '../utils/variables/variables';
 @use 'variables.modal' as modal-variables;
 @use '@cds/core/tokens/tokens.scss';
+@use '../layout/density';
 
 @include meta.load-css('properties.modal');
 
@@ -179,7 +180,7 @@
 
   .modal-header {
     border-bottom: none;
-    padding: modal-variables.$clr-modal-default-space modal-variables.$clr-modal-default-space 0;
+    padding: density.$clr-base-vertical-offset-2xl density.$clr-base-horizontal-offset-2xl 0;
 
     & + .modal-footer {
       padding-top: modal-variables.$clr-modal-default-space;
@@ -315,7 +316,7 @@
     top: -100vh;
     bottom: 0;
     right: 0;
-    left: -100vh;
+    left: -100vw;
     background-color: modal-variables.$clr-modal-backdrop-color;
     z-index: map.get(variables.$clr-layers, modal-bg);
   }
