--- a/projects/angular/src/utils/variables/_variables.global.scss
+++ b/projects/angular/src/utils/variables/_variables.global.scss
@@ -6,6 +6,7 @@
  */
 @use 'sass:math';
 @use 'variables.color';
+@use '../../layout/density/variables.density' as density;
 
 /* stylelint-disable-next-line meowtec/no-px */
 $clr-baseline-px: 24px; // DEPRECATED in 3.0: no longer used in Clarity SASS
@@ -229,10 +230,10 @@ $clr-global-error-color: variables.$clr-color-danger-800 !default;
 
 // TODO: Can any of this be grouped in a 'Layout' section?
 //5.Content Area Paddings
-$clr-content-area-padding-top: $clr_baselineRem_1 !default;
-$clr-content-area-padding-right: $clr_baselineRem_1 !default;
-$clr-content-area-padding-bottom: $clr_baselineRem_1 !default;
-$clr-content-area-padding-left: $clr_baselineRem_1 !default;
+$clr-content-area-padding-top: #{density.$clr-base-vertical-offset-2xl} !default;
+$clr-content-area-padding-right: #{density.$clr-base-horizontal-offset-2xl} !default;
+$clr-content-area-padding-bottom: #{density.$clr-base-vertical-offset-2xl} !default;
+$clr-content-area-padding-left: #{density.$clr-base-horizontal-offset-2xl} !default;
 
 // DEPRECATED?! No longer used anywhere...
 $clr-rem-1px: $clr_baselineRem_1px;
