--- a/projects/angular/src/utils/variables/_variables.typography.scss
+++ b/projects/angular/src/utils/variables/_variables.typography.scss
@@ -5,7 +5,7 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 
-@use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density/variables.density' as density;
 
 // Usage: ../typography/_typography.clarity.scss
 $clr-fontSkipBase64: false !default;
@@ -22,7 +22,7 @@ $clr-font-weight-semibold: var(--clr-font-weight-semibold) !default;
 $clr-font-weight-bold: var(--clr-font-weight-bold) !default;
 $clr-font-weight-extrabold: var(--clr-font-weight-extrabold) !default;
 
-$clr-global-typography-margin-top: #{tokens.$cds-global-space-9} !default;
+$clr-global-typography-margin-top: #{density.$clr-base-vertical-offset-2xl} !default;
 $clr-global-typography-margin-bottom: 0 !default;
 
 // Header styles
