fix(forms): update density tokens usage

--- a/projects/angular/src/forms/styles/_file-input.clarity.scss
+++ b/projects/angular/src/forms/styles/_file-input.clarity.scss
@@ -18,6 +18,10 @@
     position: relative;
     gap: density.$clr-base-gap-xs;
 
+    .clr-control-label {
+      padding: 0;
+    }
+
     .clr-file-input {
       @include mixins.equilateral(0);
       opacity: 0;
