--- a/projects/angular/src/forms/styles/_file.clarity.scss
+++ b/projects/angular/src/forms/styles/_file.clarity.scss
@@ -19,7 +19,10 @@
   .clr-file-wrapper {
     @include forms-mixins.form-flatten-validate-text();
     position: relative;
-    margin-top: forms-variables.$clr-forms-baseline;
+
+    .clr-control-label {
+      padding: 0;
+    }
 
     .btn {
       margin: 0;
@@ -38,19 +41,9 @@
     @include forms-mixins.form-flatten-compact-adjustments();
     margin-top: 0;
 
-    & ~ .clr-validate-icon {
-      line-height: calc(#{forms-variables.$clr-forms-baseline} * 4);
-    }
-    & ~ .clr-subtext {
-      line-height: calc(#{forms-variables.$clr-forms-baseline} * 4);
-      margin-top: 0;
-    }
+    & ~ .clr-subtext,
     .clr-control-label {
       margin-top: 0;
-      line-height: variables.$clr_baselineRem_0_9; // Fixes extra height in FF
-    }
-    .btn {
-      height: variables.$clr_baselineRem_1;
     }
   }
 }
