--- a/projects/angular/src/data/_properties.tables.scss
+++ b/projects/angular/src/data/_properties.tables.scss
@@ -6,7 +6,6 @@
  */
 @use '../utils/mixins';
 @use '../utils/variables/variables.global';
-@use 'variables.tables' as table-variables;
 @use '../layout/density/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
@@ -15,7 +14,9 @@
     --clr-table-borderwidth: #{tokens.$cds-alias-object-border-width-100};
     --clr-table-border-radius: #{density.$clr-base-border-radius-s};
     --clr-table-cornercellradius: #{density.$clr-base-border-radius-s};
-    --clr-table-cell-padding: #{density.$clr-base-vertical-offset-multi-row-inline-m} #{density.$clr-base-horizontal-offset-xl};
+    --clr-table-cell-padding: var(--clr-table-cell-vertical-padding) var(--clr-table-cell-horizontal-padding);
+    --clr-table-cell-horizontal-padding: #{density.$clr-base-horizontal-offset-xl};
+    --clr-table-cell-vertical-padding: #{density.$clr-base-vertical-offset-multi-row-inline-m};
     --clr-table-cell-compact-padding: #{density.$clr-base-vertical-offset-multi-row-inline-s} #{density.$clr-base-horizontal-offset-xl};
     --clr-table-noborder-borderwidth: #{tokens.$cds-global-space-0};
 
