--- a/projects/angular/src/accordion/_accordion.clarity.scss
+++ b/projects/angular/src/accordion/_accordion.clarity.scss
@@ -9,7 +9,7 @@
 @use '../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
 @use 'variables.accordion' as accordion-variables;
-@use '../layout/density' as density;
+@use '../layout/density/variables.density' as density;
 @include meta.load-css('properties.accordion');
 
 @include mixins.exports('accordion.clarity') {
