--- a/projects/angular/src/button/_variables.toggles.scss
+++ b/projects/angular/src/button/_variables.toggles.scss
@@ -5,7 +5,7 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 
-@use '../layout/density';
+@use '../layout/density/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 // Usage: ../button/_toggles.clarity.scss
