--- a/projects/angular/src/data/datagrid/_properties.datagrid.scss
+++ b/projects/angular/src/data/datagrid/_properties.datagrid.scss
@@ -10,7 +10,7 @@
 @use '../../popover/dropdown/variables.dropdown' as dropdown-variables;
 @use '../variables.tables' as tables-variables;
 @use '../../forms/styles/variables.forms' as forms-variables;
-@use '../../layout/density' as density;
+@use '../../layout/density/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('datagrid.properties') {
