--- a/projects/angular/src/data/stack-view/_stack-view.clarity.scss
+++ b/projects/angular/src/data/stack-view/_stack-view.clarity.scss
@@ -11,7 +11,7 @@
 @use '../../utils/mixins';
 @use 'variables.stack-view' as stack-view-variables;
 @use '@cds/core/tokens/tokens.scss';
-@use '../../layout/density/' as density;
+@use '../../layout/density/variables.density' as density;
 
 @include meta.load-css('properties.stack-view');
 
