--- a/projects/angular/src/data/tree-view/_variables.tree-view.scss
+++ b/projects/angular/src/data/tree-view/_variables.tree-view.scss
@@ -6,7 +6,7 @@
  */
 
 @use '@cds/core/tokens/tokens.scss';
-@use '../../layout/density' as density;
+@use '../../layout/density/variables.density' as density;
 
 // Usage: ../data/tree-view/_tree-view.clarity.scss
 $clr-tree-border-radius: var(--clr-tree-border-radius) !default;
