--- a/projects/angular/src/emphasis/_badges.clarity.scss
+++ b/projects/angular/src/emphasis/_badges.clarity.scss
@@ -7,7 +7,7 @@
 @use 'sass:meta';
 @use '../utils/mixins';
 @use 'variables.badges' as badges-variables;
-@use '../layout/density' as density;
+@use '../layout/density/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 @include meta.load-css('properties.badges');
 
