--- a/projects/angular/src/forms/styles/_file-input.clarity.scss
+++ b/projects/angular/src/forms/styles/_file-input.clarity.scss
@@ -9,7 +9,7 @@
 
 @use '../../utils/mixins';
 @use '../../utils/variables/variables';
-@use '../../layout/density' as density;
+@use '../../layout/density/variables.density' as density;
 @use 'variables.forms' as forms-variables;
 
 @include mixins.exports('forms.file-input') {
