--- a/projects/angular/src/forms/styles/_toggles.clarity.scss
+++ b/projects/angular/src/forms/styles/_toggles.clarity.scss
@@ -6,7 +6,7 @@
  */
 @use 'sass:meta';
 @use '../../button/variables.toggles' as toggle-variables;
-@use '../../layout/density';
+@use '../../layout/density/variables.density' as density;
 @use 'variables.forms' as forms-variables;
 @use '../../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
