--- a/projects/angular/src/forms/styles/_variables.forms.scss
+++ b/projects/angular/src/forms/styles/_variables.forms.scss
@@ -6,7 +6,7 @@
  */
 
 @use '@cds/core/tokens/tokens.scss';
-@use '../../layout/density';
+@use '../../layout/density/variables.density' as density;
 
 // Structure
 $clr-forms-baseline: var(--clr-forms-baseline);
