--- a/projects/angular/src/layout/_properties.card.scss
+++ b/projects/angular/src/layout/_properties.card.scss
@@ -7,7 +7,7 @@
 @use '../utils/mixins';
 @use '../utils/variables/variables';
 @use './variables.card' as card-variables;
-@use '../layout/density' as density;
+@use '../layout/density/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('card.properties') {
