--- a/projects/angular/src/layout/main-container/_variables.header.scss
+++ b/projects/angular/src/layout/main-container/_variables.header.scss
@@ -5,7 +5,7 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 
-@use '../../layout/density';
+@use '../../layout/density/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 // @deprecated in v17 in favor or $clr-header-bg-color
