--- a/projects/angular/src/layout/nav/_nav.clarity.scss
+++ b/projects/angular/src/layout/nav/_nav.clarity.scss
@@ -9,7 +9,7 @@
 @use 'variables.subnav' as subnav-variables;
 @use '../tabs/tabs.clarity' as tabs;
 @use '@cds/core/tokens/tokens.scss';
-@use '../../layout/density' as density;
+@use '../../layout/density/variables.density' as density;
 
 @include mixins.exports('nav.clarity') {
   .nav {
