--- a/projects/angular/src/layout/nav/_variables.subnav.scss
+++ b/projects/angular/src/layout/nav/_variables.subnav.scss
@@ -6,7 +6,7 @@
  */
 @use '../../utils/variables/variables';
 @use '@cds/core/tokens/tokens.scss';
-@use '../../layout/density' as density;
+@use '../../layout/density/variables.density' as density;
 
 // Usage: ../layout/nav/_subnav.clarity.scss
 // TODO: would be nice to key text color in subnav off of the bgColor...
