--- a/projects/angular/src/modal/_modal.clarity.scss
+++ b/projects/angular/src/modal/_modal.clarity.scss
@@ -10,7 +10,7 @@
 @use '../utils/variables/variables';
 @use 'variables.modal' as modal-variables;
 @use '@cds/core/tokens/tokens.scss';
-@use '../layout/density';
+@use '../layout/density/variables.density' as density;
 
 @include meta.load-css('properties.modal');
 
