--- a/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
@@ -8,7 +8,7 @@
 @use '../../utils/mixins';
 @use '../../utils/variables/variables';
 @use 'variables.dropdown' as dropdown-variables;
-@use '../../layout/density/' as density;
+@use '../../layout/density/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 @mixin generate-dropdown-menu() {
