--- a/projects/angular/src/forms/styles/_textarea.clarity.scss
+++ b/projects/angular/src/forms/styles/_textarea.clarity.scss
@@ -65,6 +65,10 @@
     max-width: calc(100% - forms-variables.$clr-forms-baseline);
   }
 
+  .clr-form-horizontal .clr-textarea-wrapper {
+    margin-top: 0;
+  }
+
   .clr-form-compact .clr-textarea-wrapper {
     margin-top: 0;
 
