--- a/projects/angular/src/forms/combobox/_properties.combobox.scss
+++ b/projects/angular/src/forms/combobox/_properties.combobox.scss
@@ -6,7 +6,7 @@
  */
 @use '../../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
-@use '../../layout/density';
+@use '../../utils/variables/variables.density' as density;
 
 @include mixins.exports('combobox.properties') {
   :root [cds-theme] {
