--- a/projects/angular/src/forms/datepicker/_datepicker.clarity.scss
+++ b/projects/angular/src/forms/datepicker/_datepicker.clarity.scss
@@ -11,7 +11,7 @@
 @use 'variables.datepicker' as datepicker-variables;
 @use '@cds/core/tokens/tokens.scss';
 @use '../../button/variables.buttons' as button-variables;
-@use '../../layout/density' as density;
+@use '../../utils/variables/variables.density' as density;
 
 @include meta.load-css('properties.datepicker');
 
