--- a/projects/angular/src/forms/datepicker/_variables.datepicker.scss
+++ b/projects/angular/src/forms/datepicker/_variables.datepicker.scss
@@ -8,7 +8,7 @@
 @use '@cds/core/tokens/tokens.scss';
 @use '../../utils/mixins';
 @use '../../button/variables.buttons' as button-variables;
-@use '../../layout/density' as density;
+@use '../../utils/variables/variables.density' as density;
 
 $clr-calendar-background-color: var(--clr-calendar-background-color) !default;
 $clr-calendar-border-color: var(--clr-calendar-border-color) !default;
