--- a/projects/angular/src/forms/styles/_datalist.clarity.scss
+++ b/projects/angular/src/forms/styles/_datalist.clarity.scss
@@ -8,7 +8,7 @@
 @use '../../utils/mixins';
 @use '../../utils/variables/variables';
 @use 'variables.forms' as forms-variables;
-@use '../../layout/density' as density;
+@use '../../utils/variables/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 input[clrDatalistInput] {
