--- a/projects/angular/src/forms/styles/_input-group.clarity.scss
+++ b/projects/angular/src/forms/styles/_input-group.clarity.scss
@@ -7,7 +7,7 @@
 @use '../../utils/mixins';
 @use 'mixins.forms' as forms-mixins;
 @use 'variables.forms' as forms-variables;
-@use '../../layout/density' as density;
+@use '../../utils/variables/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('forms.input-group') {
