--- a/projects/angular/src/forms/styles/_mixins.forms.scss
+++ b/projects/angular/src/forms/styles/_mixins.forms.scss
@@ -8,7 +8,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @use '../../utils/variables/variables.global';
-@use '../../layout/density';
+@use '../../utils/variables/variables.density' as density;
 @use 'variables.forms' as forms-variables;
 
 // Flatten the error icon and message to be inline for certain input types
