--- a/projects/angular/src/forms/styles/_properties.forms.scss
+++ b/projects/angular/src/forms/styles/_properties.forms.scss
@@ -6,7 +6,7 @@
  */
 @use '../../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
-@use '../../layout/density' as density;
+@use '../../utils/variables/variables.density' as density;
 
 @include mixins.exports('forms.properties') {
   :root [cds-theme] {
