--- a/projects/angular/src/layout/nav/_header.clarity.scss
+++ b/projects/angular/src/layout/nav/_header.clarity.scss
@@ -9,7 +9,7 @@
 @use '../../image/icons.clarity';
 @use '../../utils/mixins';
 @use '../../utils/variables/variables';
-@use '../../layout/density';
+@use '../../utils/variables/variables.density' as density;
 @use '../main-container/variables.header' as header-variables;
 @use '@cds/core/tokens/tokens.scss';
 
