--- a/projects/angular/src/layout/tabs/_tabs.clarity.scss
+++ b/projects/angular/src/layout/tabs/_tabs.clarity.scss
@@ -8,7 +8,7 @@
 @use '../../utils/mixins';
 @use 'variables.tabs' as tabs-variables;
 @use '@cds/core/tokens/tokens.scss';
-@use '../../layout/density' as density;
+@use '../../utils/variables/variables.density' as density;
 @include meta.load-css('properties.tabs');
 
 // TODO: Fix this typo
