--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -13,7 +13,7 @@
 @use 'variables.dropdown' as dropdown-variables;
 @use '@cds/core/tokens/tokens.scss';
 @use '../../layout/tabs/tabs.clarity' as tabs;
-@use '../../layout/density/' as density;
+@use '../../utils/variables/variables.density' as density;
 
 @include meta.load-css('properties.dropdown');
 
