--- a/projects/angular/src/wizard/_wizard.clarity.scss
+++ b/projects/angular/src/wizard/_wizard.clarity.scss
@@ -16,7 +16,7 @@
 @use '../utils/mixins';
 @use '../utils/variables/variables.global';
 @use 'variables.wizard' as wizard-variables;
-@use '../layout/density';
+@use '../utils/variables/variables.density' as density;
 
 @use '@cds/core/tokens/tokens.scss';
 
