--- a/projects/angular/src/forms/styles/_containers.clarity.scss
+++ b/projects/angular/src/forms/styles/_containers.clarity.scss
@@ -66,7 +66,6 @@
     color: forms-variables.$clr-forms-label-color;
     padding-top: density.$clr-base-vertical-offset-xs;
     padding-bottom: density.$clr-base-vertical-offset-xs;
-    word-wrap: break-word;
 
     @include mixins.generate-typography-token(
       'SECONDARY-13-SB-CPT',
@@ -156,6 +155,7 @@
       width: calc(32 * #{forms-variables.$clr-forms-baseline});
       min-width: calc(32 * #{forms-variables.$clr-forms-baseline});
     }
+
     .clr-form-control.clr-row > .clr-control-label {
       width: auto;
       min-width: auto;
@@ -164,6 +164,7 @@
     .clr-form-control {
       display: flex;
       flex-direction: row;
+      margin-top: density.$clr-base-vertical-offset-l;
     }
 
     .clr-control-container {
