--- a/projects/angular/src/utils/variables/_variables.density.scss
+++ b/projects/angular/src/utils/variables/_variables.density.scss
@@ -106,5 +106,6 @@ $clr-base-spinner-stroke-m: var(--clr-base-spinner-stroke-m);
 $clr-base-spinner-stroke-l: var(--clr-base-spinner-stroke-l);
 
 $clr-base-header-height: var(--clr-base-header-height);
+$clr-base-tree-node-height: var(--clr-base-tree-node-height);
 
 $clr-base-progress-bar-height: var(--clr-base-progress-bar-height);
