--- a/projects/ui/src/temp-overrides.scss
+++ b/projects/ui/src/temp-overrides.scss
@@ -11,6 +11,7 @@
   [cds-theme] {
     // font family override
     --cds-global-typography-font-family: var(--clr-metropolis-font-family);
+    --cds-global-typography-header-font-family: var(--clr-metropolis-font-family);
 
     --cds-alias-utility-gray: #{tokens.$cds-global-color-construction-600};
 
@@ -82,6 +83,30 @@
     --cds-global-layout-space-xl: var(--δ7);
     --cds-global-layout-space-xxl: var(--δ8);
     --cds-global-layout-space-xxxl: var(--δ9);
+
+    // Density cds text spacing overrides
+    --cds-global-typography-body-font-size: #{density.$clr-base-typography-font-size-default};
+    --cds-global-typography-body-line-height: #{density.$clr-base-typography-line-height-20};
+    --cds-global-typography-display-font-size: #{density.$clr-base-typography-font-size-display};
+    --cds-global-typography-display-line-height: #{density.$clr-base-typography-line-height-44};
+    --cds-global-typography-heading-font-size: #{density.$clr-base-typography-font-size-heading};
+    --cds-global-typography-heading-line-height: #{density.$clr-base-typography-line-height-32};
+    --cds-global-typography-headline-font-size: #{density.$clr-base-typography-font-size-headline};
+    --cds-global-typography-headline-line-height: #{density.$clr-base-typography-line-height-36};
+    --cds-global-typography-title-font-size: #{density.$clr-base-typography-font-size-heading};
+    --cds-global-typography-title-line-height: #{density.$clr-base-typography-line-height-32};
+    --cds-global-typography-section-font-size: #{density.$clr-base-typography-font-size-section};
+    --cds-global-typography-section-line-height: #{density.$clr-base-typography-line-height-24};
+    --cds-global-typography-subsection-font-size: #{density.$clr-base-typography-font-size-sub-section};
+    --cds-global-typography-subsection-line-height: #{density.$clr-base-typography-line-height-24};
+    --cds-global-typography-message-font-size: #{density.$clr-base-typography-font-size-sub-section};
+    --cds-global-typography-message-line-height: #{density.$clr-base-typography-line-height-24};
+    --cds-global-typography-secondary-font-size: #{density.$clr-base-typography-font-size-inline};
+    --cds-global-typography-secondary-line-height: #{density.$clr-base-typography-line-height-16};
+    --cds-global-typography-caption-font-size: #{density.$clr-base-typography-font-size-caption};
+    --cds-global-typography-caption-line-height: #{density.$clr-base-typography-line-height-16};
+    --cds-global-typography-smallcaption-font-size: #{density.$clr-base-typography-font-size-caption-small};
+    --cds-global-typography-smallcaption-line-height: #{density.$clr-base-typography-line-height-12};
   }
 
   [cds-theme~='dark'] {
